SFUSA/force-app/main/default/objects/Campaign_PR__c/fields/Campaign__c.field-meta.xml
<CustomField>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>Campaign PRs</relationshipLabel>
        <relationshipName>Campaign_PRs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>