SFUSA/force-app/main/default/objects/Campaign_PR__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
        <fullName>Unique_Key__c</fullName>
        <description>Unique key to avoid the duplicate records : Campaign__c+PR_Header__c</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>